WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109768
Fix indentation error in MediaPlayerPrivateGStreamer.h
https://bugs.webkit.org/show_bug.cgi?id=109768
Summary
Fix indentation error in MediaPlayerPrivateGStreamer.h
Soo-Hyun Choi
Reported
2013-02-13 16:25:58 PST
Indentation used in MediaPlayerPrivateGStreamer.h doesn't seem to be matched with WebKit coding style (
http://www.webkit.org/coding/coding-style.html
).
Attachments
Patch
(8.55 KB, patch)
2013-02-13 16:33 PST
,
Soo-Hyun Choi
no flags
Details
Formatted Diff
Diff
Patch
(8.54 KB, patch)
2013-02-13 17:00 PST
,
Soo-Hyun Choi
no flags
Details
Formatted Diff
Diff
Patch
(8.52 KB, patch)
2013-02-13 19:13 PST
,
Soo-Hyun Choi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Soo-Hyun Choi
Comment 1
2013-02-13 16:33:15 PST
Created
attachment 188220
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-13 16:39:56 PST
Attachment 188220
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h']" exit_code: 1 Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:110: The parameter name "state" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Kentaro Hara
Comment 3
2013-02-13 16:51:15 PST
Comment on
attachment 188220
[details]
Patch Please fix the style error before landing.
Soo-Hyun Choi
Comment 4
2013-02-13 16:57:51 PST
(In reply to
comment #3
)
> (From update of
attachment 188220
[details]
) > Please fix the style error before landing.
Sure - I will just remove the parameter name "state" in this patch.
Soo-Hyun Choi
Comment 5
2013-02-13 17:00:55 PST
Created
attachment 188225
[details]
Patch
WebKit Review Bot
Comment 6
2013-02-13 18:22:57 PST
Comment on
attachment 188225
[details]
Patch Rejecting
attachment 188225
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 188225, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue Last 500 characters of output: commit-queue/Source/WebKit/chromium/third_party/v8-i18n --revision 164 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 54>At revision 164. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/16538378
Soo-Hyun Choi
Comment 7
2013-02-13 19:13:24 PST
Created
attachment 188249
[details]
Patch
Soo-Hyun Choi
Comment 8
2013-02-13 19:16:27 PST
(In reply to
comment #6
)
> (From update of
attachment 188225
[details]
) > Rejecting
attachment 188225
[details]
from commit-queue. > > Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=gce-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 188225, '--port=chromium-xvfb']" exit_code: 2 cwd: /mnt/git/webkit-commit-queue > > Last 500 characters of output: > commit-queue/Source/WebKit/chromium/third_party/v8-i18n --revision 164 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' > 54>At revision 164. > > ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' > > ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' > Updating webkit projects from gyp files... > > Full output:
http://queues.webkit.org/results/16538378
This error was occurred due to the unchanged statememnt of "No New Test (OOPS!)", which I have fixed and re-uploaded. cq again?
WebKit Review Bot
Comment 9
2013-02-13 19:46:49 PST
Comment on
attachment 188249
[details]
Patch Clearing flags on attachment: 188249 Committed
r142845
: <
http://trac.webkit.org/changeset/142845
>
WebKit Review Bot
Comment 10
2013-02-13 19:46:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug