Fix indentation error in MediaPlayerPrivateGStreamer.h https://bugs.webkit.org/show_bug.cgi?id=109768

Patch by Soo-Hyun Choi <sh9.choi@samsung.com> on 2013-02-13
Reviewed by Kentaro Hara.

No new tests as this patch just changes indentation style.

* platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.h:
(MediaPlayerPrivateGStreamer):
(WebCore::MediaPlayerPrivateGStreamer::hasVideo):
(WebCore::MediaPlayerPrivateGStreamer::hasAudio):
(WebCore::MediaPlayerPrivateGStreamer::engineDescription):
(WebCore::MediaPlayerPrivateGStreamer::isLiveStream):

Canonical link: https://commits.webkit.org/128065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142845 268f45cc-cd09-0410-ab3c-d52691b4dbfc